# server/api/controllers/servers.js
@@ -5,7 +5,8 @@ var helpers = require('../helpers');
 var lxc = helpers.lxc;
 
 module.exports = {
-  getServers
+  getServers,
+  addServer
 };
 
 var config = process.env;
@@ -16,6 +17,29 @@ function getServers(req, reply) {
   .then((servers) => {
     reply.json({
       servers: servers
+    });
+  })
+  .catch((e) => {
+    reply.status(500);
+    reply.json({
+      message: e.toString()
+    });
+  });
+}
+
+function addServer(req, reply) {
+  var json = req.body;
+
+  return lxc.addServer(json)
+  .then((res) => {
+    if (res.error) {
+      reply.status(res.error_code);
+      return reply.json({
+        message: res.error
+      });
+    }
+    reply.json({
+      message: 'Success'
     });
   })
   .catch((e) => {
